objects/Tour_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Tour Schedules</relationshipLabel>
        <relationshipName>Tour_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <formula>Building__r.Cluster_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Email__c</fullName>
        <formula>Building__r.Cluster_Sales_Lead_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Name__c</fullName>
        <formula>Building__r.Cluster_Sales_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Cluster_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Cluster_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>This field captures the End time slot for the tours</description>
        <inlineHelpText>This field captures the End time slot for the tours</inlineHelpText>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
                <value>
                    <fullName>8:30PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Tour_Days__c</fullName>
        <inlineHelpText>The number of days a tour can be booked in advance</inlineHelpText>
        <label>Maximum Tour Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <formula>Building__r.Portfolio_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Portfolio_Sales_Manager_Email__c</formula>
        <label>Portfolio Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Portfolio_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork</fullName>
                </value>
                <value>
                    <fullName>WeLive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Building__r.Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Regional_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Regional_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Tours__c</fullName>
        <label>Simultaneous Tours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>This field has all the available slot for Start Time of the Tour</description>
        <inlineHelpText>This field has all the available slot for Start Time of the Tour</inlineHelpText>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
                <value>
                    <fullName>8:30PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>Building__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Territory_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Territory_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Spacing__c</fullName>
        <label>Tour Spacing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Half Hour</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tour Schedule</label>
    <nameField>
        <displayFormat>TS-{000}</displayFormat>
        <label>Tour Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Tour_Spacing__c</columns>
        <columns>Simultaneous_Tours__c</columns>
        <columns>Maximum_Tour_Days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>